Fix embed iframes growing too big

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5036,6 +5036,8 @@ table { border-collapse: collapse; }
   .rich-text h6 { font-size: 18px; }
 }
 
+.rich-text iframe { max-width: 100%; }
+
 .rich-text p + p { margin-top: 20px; }
 
 .rich-text a:not(.no-underline) { text-decoration: underline; }
