--- a/assets/css/partials/theme.pcss
+++ b/assets/css/partials/theme.pcss
@@ -20,6 +20,7 @@
     & h6 { @apply text-18; }
   }
 
+  & iframe { @apply max-w-full; }
   & p + p { @apply mt-20; }
   & a:not(.no-underline) { @apply underline; }
 
